--- a/src/app/components/puzzle/puzzle.component.css
+++ b/src/app/components/puzzle/puzzle.component.css
@@ -2,12 +2,8 @@
   display: block;
 }
 
-mat-expansion-panel{
-  width: 40%;
-}
-
-mat-expansion-panel mat-form-field{
-  margin: 0 1rem;
+mat-form-field{
+  margin: 0 1em;
 }
 
 div button {
